force-app/main/default/objects/Persona__c/Persona__c.object-meta.xml
<CustomObject>
    <label>Persona</label>
    <nameField>
        <label>Persona</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>