force-app/main/default/objects/Persona__c/fields/Goals__c.field-meta.xml
<CustomField>
    <fullName>Goals__c</fullName>
    <inlineHelpText>The main priorities or goals of the persona when using your product or service</inlineHelpText>
    <label>Goals</label>
    <type>TextArea</type>
</CustomField>