force-app/main/default/objects/Persona__c/fields/Pain_Points__c.field-meta.xml
<CustomField>
    <fullName>Pain_Points__c</fullName>
    <inlineHelpText>The primary pain points or challenges the persona faces when using your product or service.</inlineHelpText>
    <label>Pain Points</label>
    <type>TextArea</type>
</CustomField>