force-app/main/default/objects/Persona__c/fields/Tech_Proficiency__c.field-meta.xml
<CustomField>
    <fullName>Tech_Proficiency__c</fullName>
    <label>Tech Proficiency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beginner</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>